pdfreader 0.1.6.dev1
---------------------------
 - Missing `Resources.Properties` field added.
 - Pillow >= 7.1.0 version bump (security issues)

pdfreader 0.1.5, 2020-08-27
---------------------------
 - Issue #41: RecursionError: maximum recursion depth exceeded
 - Issue #39: Pillow version bump

pdfreader 0.1.4, 2020-02-21
---------------------------
 - Issue #34: Stream Length can be Indirect Reference now.
 - Issue #29: Optional Type=Encoding key for Encoding dictionary
 - Issue #27: Empty XObject resources cause AttributeError
 - Issue #25: pdfreader.exceptions.ParserException: Dict, stream or hexstring expected
 - Issue #23: BI/EI: TypeError: can't concat bytes to NoneType
 - Issue #18: pdfreader.parsers.cmap.CMapParserException: Regular non-digit character expected
 - Issue #17: NotImplementedError: DCTDecode
 - Issue #16: RecursionError: maximum recursion depth exceeded



pdfreader 0.1.3, 2019-12-20
---------------------------
 - CMap-based text decoding issue fixed
 - Multiple filters support for inline images added
 - nbspace added to MacRomanEncoding and WinAnsiEncoding
 - GraphicsState issue issue related to loosing some state attributes fixed